--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,5 @@
-== README
+# FollowAnalytics Heroku Insurance Demo
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This mobile app is part of a self-service demo that uses Heroku, Salesforce and FollowAnalytics.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+To get started, please go to the [project page on Github Pages](https://followanalytics.github.io/fa-demo-heroku-insurance/).
